--- a/build.gradle
+++ b/build.gradle
@@ -4,11 +4,11 @@ plugins {
 }
 
 
-group = 'com.khannan'
-version = '1.0-SNAPSHOT'
+group = 'com.khannan.firstmod'
+version = '0.0.1-1.19'
 
 java {
-    archivesBaseName = 'Demo'
+    archivesBaseName = 'firstmod'
     toolchain.languageVersion = JavaLanguageVersion.of(17)
 }
 
@@ -50,10 +50,10 @@ minecraft {
             property 'forge.logging.console.level', 'debug'
 
                         // Comma-separated list of namespaces to load gametests from. Empty = all namespaces.
-            property 'forge.enabledGameTestNamespaces', 'Demo'
+            property 'forge.enabledGameTestNamespaces', 'firstmod'
             
             mods {
-                demo {
+                firstmod {
                     source sourceSets.main
                 }
             }
@@ -66,10 +66,10 @@ minecraft {
 
             property 'forge.logging.console.level', 'debug'
 
-                        property 'forge.enabledGameTestNamespaces', 'Demo'
+                        property 'forge.enabledGameTestNamespaces', 'firstmod'
             
             mods {
-                demo {
+                firstmod {
                     source sourceSets.main
                 }
             }
@@ -85,10 +85,10 @@ minecraft {
 
             property 'forge.logging.console.level', 'debug'
 
-            property 'forge.enabledGameTestNamespaces', 'Demo'
+            property 'forge.enabledGameTestNamespaces', 'firstmod'
 
             mods {
-                demo {
+                firstmod {
                     source sourceSets.main
                 }
             }
@@ -102,10 +102,10 @@ minecraft {
             property 'forge.logging.console.level', 'debug'
 
             // Specify the modid for data generation, where to output the resulting resource, and where to look for existing resources.
-            args '--mod', 'demo', '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
+            args '--mod', 'firstmod', '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
 
             mods {
-                demo {
+                firstmod {
                     source sourceSets.main
                 }
             }
@@ -149,12 +149,12 @@ dependencies {
 jar {
     manifest {
         attributes([
-                "Specification-Title": "demo",
-                            //"Specification-Vendor": "demo authors",
+                "Specification-Title": "firstmod",
+                            //"Specification-Vendor": "firstmod authors",
                             "Specification-Version": "1", // We are version 1 of ourselves
                 "Implementation-Title": project.name,
                 "Implementation-Version": project.jar.archiveVersion,
-                            //"Implementation-Vendor": "demo authors",
+                            //"Implementation-Vendor": "firstmod authors",
                             "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
         ])
     }
